Script bugfix